[package]
name = "ldtab_rs"
version = "0.1.0"
authors = ["chris <chris.kind.man@gmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="ldtab_rs"
crate-type = ["cdylib", "lib"]

[[bin]]
name = "mybin"
path = "src/main.rs"

[dependencies.pyo3]
version = "0.14.5"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py36" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.6
features = ["extension-module", "abi3-py36"]

[dependencies]
wiring_rs = { path = "../wiring.rs" }
serde = { version = "1.0", features = ["derive"] }
regex = "1.6.0"
serde_json = "1.0"
horned-owl = "0.12.0"
im = "15.1.0"
itertools = "0.10.3"
rio_api = "0.7.1"
rio_xml = "0.7.3"
